--- a/register.html
+++ b/register.html
@@ -152,7 +152,7 @@
                         </div>
                         
                         <div class="form-register__input">
-                            <span class="span-text">¿Ya tiene cuenta? <a href="./login.html">Ingrese acá</a></span>
+                            <span class="span-text">¿Ya tiene cuenta? <a href="./login.php">Ingrese acá</a></span>
                         </div>
                         <div>
                             <input class="button submit-button" type="submit" value="Registrarse" id="registerFormSubmit" >
